@@ -2,6 +2,8 @@
   * Use correct scale when interpretting alpha (e.g. rgba(0,0,0,1)).
   * DrawGetVectorGraphics() now returns proper XML (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27751).
+  * Support writing EXR files with different color types (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=27759).
 
 2015-06-01  6.9.1-4 Cristy  <quetzlzacatenango@image...>
   * New version 6.9.1-4, SVN revision 18697.
